@@ -1,5 +1,7 @@
 namespace SimpleInjector.Integration.Wcf
 {
+    using System;
+    using System.Collections.Generic;
     using System.Collections.ObjectModel;
     using System.Linq;
     using System.ServiceModel;
@@ -25,20 +27,46 @@ namespace SimpleInjector.Integration.Wcf
         public void ApplyDispatchBehavior(ServiceDescription serviceDescription,
             ServiceHostBase serviceHostBase)
         {
-            var endpoints =
-                from dispatcher in serviceHostBase.ChannelDispatchers.OfType<ChannelDispatcher>()
-                from endpoint in dispatcher.Endpoints
-                select endpoint;
-
-            foreach (var endpoint in endpoints)
+            if (serviceDescription == null)
             {
-                endpoint.DispatchRuntime.InstanceProvider =
-                    new SimpleInjectorInstanceProvider(this.container, serviceDescription.ServiceType);
+                throw new ArgumentNullException("serviceDescription");
+            }
+
+            if (serviceHostBase == null)
+            {
+                throw new ArgumentNullException("serviceHostBase");
+            }
+
+            var instanceProvider =
+                new SimpleInjectorInstanceProvider(this.container, serviceDescription.ServiceType);
+
+            var endpointDispatchers = 
+                GetEndpointDispatchersForImplementedContracts(serviceDescription, serviceHostBase);
+
+            foreach (var endpointDispatcher in endpointDispatchers)
+            {
+                endpointDispatcher.DispatchRuntime.InstanceProvider = instanceProvider;
             }
         }
 
         public void Validate(ServiceDescription serviceDescription, ServiceHostBase serviceHostBase)
         {
+        }
+
+        private static IEnumerable<EndpointDispatcher> GetEndpointDispatchersForImplementedContracts(
+            ServiceDescription serviceDescription, ServiceHostBase serviceHostBase)
+        {
+            var implementedContracts = (
+                from serviceEndpoint in serviceDescription.Endpoints
+                where serviceEndpoint.Contract.ContractType.IsAssignableFrom(serviceDescription.ServiceType)
+                select serviceEndpoint.Contract.Name)
+                .ToList();
+
+            return
+                from channelDispatcher in serviceHostBase.ChannelDispatchers.OfType<ChannelDispatcher>()
+                from endpointDispatcher in channelDispatcher.Endpoints
+                where implementedContracts.Contains(endpointDispatcher.ContractName)
+                select endpointDispatcher;
         }
     }
 }
